<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="@dimen/tile_left_col_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/tile_left_col_left_margin"
            android:layout_marginTop="@dimen/tile_cols_margin_top"
            android:layout_marginRight="@dimen/tile_left_col_right_margin"
            android:columnCount="1">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ssid_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ssid_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/ssid_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ssid_default"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mac_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/mac_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mac_default"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/linkspeed_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkspeed_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/linkspeed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/linkspeed_default"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/frequency_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/frequency_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/frequency_default"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

        <GridLayout
            android:layout_width="@dimen/tile_right_col_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/tile_cols_margin_top"
            android:columnCount="1">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bssid_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bssid_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/bssid_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/bssid_default"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/score_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/score_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/score_default"
                        android:textAppearance="?attr/textAppearanceHeadline2"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/rssi_card"
                android:layout_width="@dimen/tile_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tile_margin"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="@dimen/tile_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/tile_padding">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rssi_heading"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/rssi_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/rssi_default"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        android:textColor="?android:attr/textColorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fetchbtn_default_text"
        android:id="@+id/fetchBtn"
        android:onClick="onFetchClick">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>